# AI4SE_Final_Project_A_Coding_Agent_Harness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  CHANGELOG.md  CI_RECORD.md  Dockerfile  FINAL_REPORT.md  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  config.toml  pyproject.toml
.github/workflows/: unit-test.yml
harness/: __init__.py
harness/cli/: __init__.py  main.py
harness/config/: __init__.py  config_manager.py
harness/context/: __init__.py  context_builder.py
harness/credentials/: __init__.py  credential_manager.py
harness/feedback/: __init__.py  coordination.py  fingerprint.py  pipeline.py  router.py
harness/guard/: __init__.py  guardrail.py  rule_engine.py
harness/llm/: __init__.py  abstract_llm.py  deepseek_adapter.py  mock_adapter.py  openai_adapter.py
harness/loop/: __init__.py  main_loop.py
harness/memory/: __init__.py  policy.py  retriever.py  serializer.py  store.py
harness/models/: __init__.py  action.py  approval.py  config.py  execution_outcome.py  feedback.py  guard_result.py  llm_response.py  memory_entry.py  parse_error.py  persist_decision.py  rule_result.py  tool_call.py  tool_definition.py  tool_result.py
request/: AI4SE_Final_Project_通用要求.md
tests/: conftest.py  test_action_parser.py  test_approval_providers.py  test_ci.py  test_cli.py  test_config_manager.py  test_context_builder.py  test_coordination_layer.py  test_credential_manager.py  test_docker.py  test_feedback_generators_phase2.py  test_feedback_generators_phase3.py  test_feedback_pipeline.py  test_feedback_router.py  test_fingerprint.py  test_governance_controller.py  test_guardrail.py  test_llm_adapters.py  test_main_loop.py  test_mechanism_demo.py  test_memory_policy.py  test_memory_retriever.py  test_memory_store.py  test_models.py  test_readme.py  test_recovery_controller.py  test_rule_engine.py  test_serializer.py  test_shell_generator.py  test_tool_executor.py  test_tool_registry.py
(+42 files in other folders)
